--- a/app/src/main/res/layout/privecy_policy.xml
+++ b/app/src/main/res/layout/privecy_policy.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="40dp"
         android:background="#d2cdcd"
         android:enabled="false"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="monospace"
         android:text="Get Started"
         android:textAllCaps="false"
         android:textColor="#fff"
@@ -62,7 +62,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/but_gradient"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="monospace"
         android:text="Exit"
         android:textAllCaps="false"
         android:textColor="#fff"
