--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -25,7 +25,8 @@
         android:layout_height="35dp"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/but_gradient"
+        android:background="@color/colorPrimary"
+        android:fontFamily="monospace"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="#fff"
@@ -44,9 +45,8 @@
         android:layout_marginRight="16dp"
         android:background="#fff"
         android:drawableRight="@drawable/forword"
-        android:drawableTint="@color/colorAccent"
+        android:fontFamily="monospace"
         android:text="next"
-        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
