--- a/app/src/main/res/layout/dialog_show_getstart_video_demo.xml
+++ b/app/src/main/res/layout/dialog_show_getstart_video_demo.xml
@@ -44,7 +44,7 @@
         android:layout_height="37dp"
         android:layout_marginBottom="28dp"
         android:background="@drawable/but_gradient"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="monospace"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="#fff"
