--- a/app/src/main/res/layout/activity_password_and_another_input.xml
+++ b/app/src/main/res/layout/activity_password_and_another_input.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="com.itvillage.dev.offlinebkashap.FragmentShowActivity">
+    tools:context="com.itvillage.dev.offlinerocketapp.FragmentShowActivity">
 
     <FrameLayout
         android:id="@+id/fragment_layout"
