--- a/app/src/main/res/layout/activity_account_number.xml
+++ b/app/src/main/res/layout/activity_account_number.xml
@@ -7,7 +7,7 @@
     android:layout_height="fill_parent"
     android:gravity="center"
     android:padding="20dp"
-    tools:context="com.itvillage.dev.offlinebkashap.GetPhoneNumberActivity">
+    tools:context="com.itvillage.dev.offlinerocketapp.GetPhoneNumberActivity">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView1"
