--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffff"
-    tools:context="com.itvillage.dev.offlinebkashap.ScannerActivity">
+    tools:context="com.itvillage.dev.offlinerocketapp.ScannerActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pageView"
