--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.itvillage.dev.offlinebkashap.NotificationActivity">
+    tools:context="com.itvillage.dev.offlinerocketapp.NotificationActivity">
 
     <TextView
         android:id="@+id/heading"
