--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context="com.itvillage.dev.offlinebkashap.SplashScreenHomeActivity">
+    tools:context="com.itvillage.dev.offlinerocketapp.SplashScreenHomeActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pageView"
