--- a/app/src/main/res/layout/activity_splash_screen2.xml
+++ b/app/src/main/res/layout/activity_splash_screen2.xml
@@ -7,6 +7,6 @@
     android:background="@color/colorAccent"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context="com.itvillage.dev.offlinebkashap.SplashScreenActivity">
+    tools:context="com.itvillage.dev.offlinerocketapp.SplashScreenActivity">
 
 </android.support.constraint.ConstraintLayout>
